# RadeonProRenderMayaPlugin

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README-OSX.md  README.md  RadeonProRenderMayaPlugin.sln  build_windows.cmd  copy_bild.cmd  useless_file  version.h  vs_path.bat
FireRender.Maya.Linux/Checker/: CMakeLists.txt  checker.cpp  formSelect.cpp  formSelect.h  maya_versions.h
FireRender.Maya.OSX/: CMakeLists.txt  RadeonProRenderForMaya.pkgproj  Readme.txt
FireRender.Maya.OSX/RPRMaya.xcworkspace/: contents.xcworkspacedata
FireRender.Maya.OSX/TraceRPR/TraceRPR.xcodeproj/: project.pbxproj
FireRender.Maya.OSX/frMayaPluginMac/: athenaSystemInfo.m  postbuild.py  postbuild_debug.sh  postbuild_release.sh  prebuild.sh  remappath.py  rpr2016.5.mod  rpr2016.mod  rpr2017.mod  rpr2018.mod  rpr2019.mod  rpr2020.mod  rpr2022.mod  rpr2023.mod  rpr2024.mod
FireRender.Maya.OSX/frMayaPluginMac/frMayaMac/: Makefile  PrefixHeader.pch
FireRender.Maya.OSX/sh/: postinstall.sh  preinstall.sh  uninstall.sh
FireRender.Maya.Src/: AnimationExporter.cpp  AnimationExporter.h  AutoLock.h  CMakeLists.txt  CompositeWrapper.cpp  CompositeWrapper.h  DependencyNode.cpp  DependencyNode.h  EnableSaveIntermediateCmd.cpp  EnableSaveIntermediateCmd.h  FastNoise.cpp  FastNoise.h  FileSystemUtils.cpp  FileSystemUtils.h  FireMaterialViewRenderer.cpp  FireMaterialViewRenderer.h  FireMaya.cpp  FireMaya.h  FireRender.vcxproj  FireRender.vcxproj.filters  FireRender.vcxproj.filters.orig  FireRender.vcxproj.orig  FireRenderAO.cpp  FireRenderAO.h  FireRenderAOV.cpp  FireRenderAOV.h  FireRenderAOVDepth.cpp  FireRenderAOVDepth.h  FireRenderAOVs.cpp  FireRenderAOVs.h  FireRenderAddMaterial.cpp  FireRenderAddMaterial.h  FireRenderArithmetic.cpp  FireRenderArithmetic.h  FireRenderBevel.cpp  FireRenderBevel.h  FireRenderBlendMaterial.cpp  FireRenderBlendMaterial.h  FireRenderBlendOverride.cpp  FireRenderBlendOverride.h  (+198 more)
FireRender.Maya.Src/Context/: ContextCreator.cpp  ContextCreator.h  FireRenderContext.cpp  FireRenderContext.h  FireRenderContextIFace.h  HybridContext.cpp  HybridContext.h  HybridProContext.cpp  HybridProContext.h  TahoeContext.cpp  TahoeContext.h
FireRender.Maya.Src/Hosek/: ArHosekSkyModel.cpp
FireRender.Maya.Src/IES/: FireRenderIESLight.cpp  IESLightLocatorMesh.cpp
FireRender.Maya.Src/Lights/: FireRenderLightCommon.cpp  FireRenderLightCommon.h
FireRender.Maya.Src/Lights/IES/: FireRenderIESLight.cpp  FireRenderIESLight.h  IESLightLocatorMesh.cpp  IESLightLocatorMesh.h
FireRender.Maya.Src/Lights/PhysicalLight/: FireRenderPhysicalLightLocator.cpp  FireRenderPhysicalLightLocator.h  FireRenderPhysicalOverride.cpp  FireRenderPhysicalOverride.h  PhysicalLight.h  PhysicalLightAttributes.cpp  PhysicalLightAttributes.h  PhysicalLightData.cpp  PhysicalLightData.h  PhysicalLightGeometryUtility.cpp  PhysicalLightGeometryUtility.h
FireRender.Maya.Src/MayaStandardNodesSupport/: AddDoubleLinearConverter.cpp  AddDoubleLinearConverter.h  BaseConverter.cpp  BaseConverter.h  BlendColorsConverter.cpp  BlendColorsConverter.h  BlendTwoAttrConverter.cpp  BlendTwoAttrConverter.h  Bump2dConverter.cpp  Bump2dConverter.h  ClampConverter.cpp  ClampConverter.h  ColorMathConverter.h  ContrastConverter.cpp  ContrastConverter.h  FileNodeConverter.cpp  FileNodeConverter.h  GammaCorrectConverter.cpp  GammaCorrectConverter.h  MultDoubleLinearConverter.cpp  MultDoubleLinearConverter.h  MultiplyDivideConverter.cpp  MultiplyDivideConverter.h  NodeCheckerConverter.cpp  NodeCheckerConverter.h  NodeConverterUtil.cpp  NodeConverterUtil.h  NodeProcessingUtils.cpp  NodeProcessingUtils.h  NoiseConverter.cpp  NoiseConverter.h  Place2dTextureConverter.cpp  Place2dTextureConverter.h  PlusMinusAverageConverter.cpp  PlusMinusAverageConverter.h  ProjectionNodeConverter.cpp  ProjectionNodeConverter.h  RGBToHSVConverter.h  RampNodeConverter.cpp  RampNodeConverter.h  (+10 more)
FireRender.Maya.Src/Shelfs/: shelf_Radeon_ProRender.mel
FireRender.Maya.Src/Translators/: MeshTranslator.cpp  MeshTranslator.h  MultipleShaderMeshTranslator.cpp  MultipleShaderMeshTranslator.h  SingleShaderMeshTranslator.cpp  SingleShaderMeshTranslator.h  Translators.cpp  Translators.h
FireRender.Maya.Src/Volumes/: FireRenderVolumeLocator.cpp  FireRenderVolumeLocator.h  FireRenderVolumeOverride.cpp  FireRenderVolumeOverride.h  VolumeAttributes.cpp  VolumeAttributes.h
FireRender.Maya.Src/docs/: Material Node Parameters.txt
FireRender.Maya.Src/icons/: amd.xpm
FireRender.Maya.Src/images/.mayaSwatches/: blank.jpg_hcm.swatch
FireRender.Maya.Src/python/fireRender/: client.py  common.py  fireRenderMenu.py  fireRenderUtils.py  renderViewUtils.py  rprMaterialXBrowser.py  (+3 more)
FireRender.Maya.Src/renderDesc/: FireRenderRenderer.xml
FireRender.Maya.Src/scripts/: AERPRAddMaterialTemplate.mel  AERPRBlendMaterialTemplate.mel  AERPRDoubleSidedTemplate.mel  AERPRGlobalsTemplate.mel  AERPRIBLTemplate.mel  AERPRIESTemplate.mel  AERPRMaterialTemplate.mel  AERPRMatteMaterialTemplate.mel  AERPRPBRMaterialTemplate.mel  AERPRPhysicalLightTemplate.mel  AERPRRampTemplate.mel  AERPRShadowCatcherMaterialTemplate.mel  AERPRSkyTemplate.mel  AERPRSubsurfaceMaterialTemplate.mel  AERPRToonMaterialTemplate.mel  AERPRUberMaterialTemplate.mel  AERPRVolumeMaterialTemplate.mel  AERPRVolumeTemplate.mel  RenderEffectsTab.mel  RenderQualityTab.mel  RenderSamplingTab.mel  SystemTab.mel  common.mel  createFireRenderCommonGlobalsTab.mel  createFireRenderGlobalsTab.mel  fireRenderBatch.mel  fireRenderEnvironment.mel  fireRenderIpr.mel  fireRenderUpdateAE.mel  optionVars.mel  presets.mel  registerFireRender.mel  rprCmdRenderUtils.mel  rprGltfExport.mel  rprUnifiedRenderGlobalsWindow201800.mel  rprUnifiedRenderGlobalsWindow201900.mel  rprUnifiedRenderGlobalsWindow202000.mel  setupFireRenderExtraUI.mel  setupFireRenderNodeClassification.mel  shelfCommands.mel
FireRender.Maya.Src/shaders/: rprBlitColor10.fx  rprBlitColorGL.cgfx
FireRender.Maya.UnitTests/: CMakeLists.txt  FireRender.UnitTests.vcxproj  FireRender.UnitTests.vcxproj.filters  PortableUtilsTests.cpp  stdafx.cpp  stdafx.h  targetver.h
(+271 files in other folders)
