set(SOURCE_FILES
"FileSystemUtils.cpp"
"FireMaterialViewRenderer.cpp"
"FireMaya.cpp"
"FireRenderAddMaterial.cpp"
"FireRenderAOV.cpp"
"FireRenderAOVs.cpp"
"FireRenderArithmetic.cpp"
"FireRenderBlendMaterial.cpp"
"FireRenderBlendOverride.cpp"
"FireRenderBlendValue.cpp"
"FireRenderBump.cpp"
"FireRenderChecker.cpp"
"FireRenderCmd.cpp"
"FireRenderContext.cpp"
"FireRenderConvertVRayCmd.cpp"
"FireRenderDot.cpp"
"FireRenderDisplacement.cpp"
"FireRenderEnvironmentLight.cpp"
"FireRenderError.cpp"
"FireRenderExportCmd.cpp"
"FireRenderFresnel.cpp"
"FireRenderFresnelSchlick.cpp"
"FireRenderGlobals.cpp"
"FireRenderGradient.cpp"
"FireRenderIESLight.cpp"
"FireRenderIBL.cpp"
"FireRenderImageComparing.cpp"
"FireRenderImageUtil.cpp"
"FireRenderImportCmd.cpp"
"FireRenderImportExportXML.cpp"
"FireRenderIpr.cpp"
"FireRenderThread.cpp"
"FireRenderLookup.cpp"
"FireRenderMaterial.cpp"
"FireRenderMaterialSwatchRender.cpp"
"FireRenderNoise.cpp"
"FireRenderNormal.cpp"
"FireRenderObjects.cpp"
"FireRenderOverride.cpp"
"FireRenderProduction.cpp"
"FireRenderPassthrough.cpp"
"FireRenderPortableUtils.cpp"
"FireRenderSkyLocator.cpp"
"FireRenderStandardMaterial.cpp"
"FireRenderTransparentMaterial.cpp"
"FireRenderVolumeMaterial.cpp"
"FireRenderSurfaceOverride.cpp"
"FireRenderTextureCache.cpp"
"FireRenderTexture.cpp"
"FireRenderUtils.cpp"
"FireRenderViewportCmd.cpp"
"FireRenderViewport.cpp"
"FireRenderViewportBlit.cpp"
"FireRenderViewportManager.cpp"
"FireRenderViewportOperation.cpp"
"FireRenderViewportUI.cpp"
"frWrap.cpp"
"IESLightLocatorMesh.cpp"
"MaterialLoader.cpp"
"pluginMain.cpp"
"RenderCacheWarningDialog.cpp"
"RenderProgressBars.cpp"
"RenderStamp.cpp"
"ShadersManager.cpp"
"Translators.cpp"
"SkyGen.cpp"
"DependencyNode.cpp"
"SunPositionCalculator.cpp"
"FireRenderLocationCmd.cpp"
"SkyAttributes.cpp"
"SkyBuilder.cpp"
"SkyLocatorMesh.cpp"
"SubsurfaceMaterial.cpp"
"VRay.cpp"
"AutoLock.h"
"base_mesh.h"
"common.h"
"FileSystemUtils.h"
"FireMaterialViewRenderer.h"
"FireMaya.h"
"FireRenderAddMaterial.h"
"FireRenderAOV.h"
"FireRenderAOVs.h"
"FireRenderArithmetic.h"
"FireRenderBlendMaterial.h"
"FireRenderBlendOverride.h"
"FireRenderBlendValue.h"
"FireRenderBump.h"
"FireRenderChecker.h"
"FireRenderCmd.h"
"FireRenderContext.h"
"FireRenderConvertVRayCmd.h"
"FireRenderDot.h"
"FireRenderDisplacement.h"
"FireRenderEnvironmentLight.h"
"FireRenderError.h"
"FireRenderExportCmd.h"
"FireRenderFresnel.h"
"FireRenderFresnelSchlick.h"
"FireRenderGlobals.h"
"FireRenderGradient.h"
"FireRenderIESLight.h"
"FireRenderIBL.h"
"FireRenderImageComparing.h"
"FireRenderImageUtil.h"
"FireRenderImportCmd.h"
"FireRenderImportExportXML.h"
"FireRenderIpr.h"
"FireRenderThread.cpp"
"FireRenderLookup.h"
"FireRenderMaterial.h"
"FireRenderMaterialSwatchRender.h"
"FireRenderNoise.h"
"FireRenderNormal.h"
"FireRenderObjects.h"
"FireRenderOverride.h"
"FireRenderProduction.h"
"FireRenderPassthrough.h"
"FireRenderPortableUtils.h"
"FireRenderSkyLocator.h"
"FireRenderStandardMaterial.h"
"FireRenderTransparentMaterial.h"
"FireRenderVolumeMaterial.h"
"FireRenderSurfaceOverride.h"
"FireRenderTextureCache.h"
"FireRenderTexture.h"
"FireRenderUtils.h"
"FireRenderViewportCmd.h"
"FireRenderViewport.h"
"FireRenderViewportBlit.h"
"FireRenderViewportManager.h"
"FireRenderViewportOperation.h"
"FireRenderViewportUI.h"
"frWrap.h"
"IESLightLocatorMesh.h"
"Logger.h"
"MaterialLoader.h"
"RenderCacheWarningDialog.h"
"RenderProgressBars.h"
"RenderRegion.h"
"RenderStamp.h"
"RenderStampFont.h"
"resource.h"
"ShadersManager.h"
"Translators.h"
"DependencyNode.h"
"SunPositionCalculator.h"
"FireRenderLocationCmd.h"
"FireRenderMath.h"
"SkyAttributes.h"
"SkyBuilder.h"
"SkyLocatorMesh.h"
"SubsurfaceMaterial.h"
"VRay.h"
"../ThirdParty/RadeonProRender SDK/Linux-CentOS/inc/RprTools.h"
"../ThirdParty/RadeonProRender SDK/Linux-CentOS/inc/RprTools.cpp"
"Hosek/ArHosekSkyModel.cpp"
"Hosek/ArHosekSkyModelData_CIEXYZ.h"
"Hosek/ArHosekSkyModelData_RGB.h"
"Hosek/ArHosekSkyModelData_Spectral.h"
"Hosek/ArHosekSkyModel.h"
)

find_package(Maya REQUIRED)
find_package(RPR REQUIRED)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()

include_directories(${MAYA_INCLUDE_DIR})
link_directories(${MAYA_LIBRARY_DIR})

include_directories(${RPR_INCLUDE_DIR})
link_directories(${RPR_LIBRARY_DIR})

include_directories(${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})

add_subdirectory(Hosek)

target_link_libraries(${PROJECT_NAME} ${MAYA_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${RPR_LIBRARIES})

set_directory_properties(PROPERTIES COMPILE_DEFINITIONS_DEBUG "_DEBUG")

MAYA_PLUGIN(${PROJECT_NAME})
